# GPT

./: .env.example  .gitignore  README.md  pyproject.toml  run_backend.py  run_mock_feishu.py  run_mock_gitlab.py  run_stack.sh
app/: main.py
app/api/: commits.py  health.py  logs.py  pages.py  reports.py  routes.py  settings.py  sync.py
app/core/: branches.py  config.py  logging.py
app/db/: session.py
app/llm/: __init__.py  client.py
app/models/: __init__.py  branch.py  commit.py  contributor.py  daily_report.py  feishu_message_log.py  settings.py
app/schemas/: commit.py  feishu.py  log.py  report.py  settings.py  sync.py
app/services/: commit_service.py  feishu_client.py  feishu_service.py  gitlab_client.py  log_service.py  report_service.py  scheduler_service.py  settings_service.py  sync_service.py
app/static/: app.js  styles.css
app/templates/: index.html
docs/: plan.md  project.md
mock/: feishu_server.py  gitlab_server.py
mock/fixtures/basic/: branches.json  commits.json  project.json
mock/fixtures/feishu_basic/: records.json  token.json
mock/fixtures/many_commits/: branches.json  commits.json  project.json
mock/fixtures/no_commits/: branches.json  commits.json  project.json
